Adds 'stay logged in' functionality

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
                     </svg>
                     Sign in with Google
                 </button>
+                <div class="stay-logged-in">
+                    <label class="checkbox-container">
+                        <input type="checkbox" id="stayLoggedInCheckbox" checked>
+                        <span class="checkmark"></span>
+                        Stay logged in
+                    </label>
+                </div>
                 <div class="auth-status" id="authStatus"></div>
             </div>
         </div>
