Removes unused auth function call

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </svg>
                     Share
                 </button>
-                <div class="user-info" id="userInfo"></div>
+                <button class="small-btn" id="refreshBtn" title="Refresh the page">Refresh</button>
                 <button class="small-btn" id="resetDataBtn" title="Create a new spreadsheet">Reset</button>
                 <button class="sign-out-btn" id="signOutBtn">Sign Out</button>
             </div>
