Adds re-auth automatically

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             <div class="header-left">
                 <h1>Meal Planning</h1>
                 <div class="date-display" id="dateDisplay"></div>
+                <div class="auth-status-indicator" id="authStatusIndicator" style="display: none;">
+                    <span class="auth-indicator-dot"></span>
+                    <span class="auth-indicator-text">Auto re-auth enabled</span>
+                </div>
             </div>
             <div class="header-right">
                 <button class="share-btn" id="shareBtn" title="Share with others">
