Moves some things around

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
                         Stay logged in
                     </label>
                 </div>
+                <button class="auth-refresh-btn" id="authRefreshBtn" title="Refresh the page if you're experiencing issues">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <polyline points="23,4 23,10 17,10"></polyline>
+                        <path d="M20.49 15a9 9 0 1 1-2.12-9.36L23 10"></path>
+                    </svg>
+                    Refresh
+                </button>
                 <div class="auth-status" id="authStatus"></div>
             </div>
         </div>
@@ -75,9 +82,6 @@
                         </div>
                         <div class="meal-items" id="mealItems">
                             <!-- Meal items will be populated here -->
-                        </div>
-                        <div class="swipe-hint">
-                            💡 Swipe items left to replace, right to add to grocery & replace
                         </div>
                         <div class="meal-progress">
                             <span class="current-meal" id="currentMeal">1</span>
